# ZeroSlack

./: .gitignore  CMakeLists.txt  completionmanager.cpp  completionmanager.h  completionmodel.cpp  completionmodel.h  demo.pro  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modemanager.cpp  modemanager.h  mycodeeditor.cpp  mycodeeditor.h  myhighlighter.cpp  myhighlighter.h  mytextedit.ui  navigationmanager.cpp  navigationmanager.h  navigationwidget.cpp  navigationwidget.h  readme.txt  relationshipprogressdialog.cpp  relationshipprogressdialog.h  scope_tree.h  scopebandwidget.cpp  scopebandwidget.h  scopeitem.cpp  scopeitem.h  slangmanager.cpp  slangmanager.h  smartrelationshipbuilder.cpp  smartrelationshipbuilder.h  sv_lexer.cpp  sv_lexer.h  sv_symbol_parser.cpp  sv_symbol_parser.h  sv_token.h  (+12 more)
config/: keywords.txt
